--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
                 </configuration>
             </plugin>
         </plugins>
+        <testResources>
+            <testResource>
+                <directory>src/test/java/com.iiitb.pharmacy/</directory>
+            </testResource>
+        </testResources>
     </build>
 
 </project>
